# regex-lens

./: PLAN.md  README.md  pyproject.toml
samples/: log-line.regex
src/regex_lens/: __init__.py  cli.py  explainer.py  markdown.py  mermaid.py  model.py  parser.py
tests/: test_cli.py  test_markdown.py  test_mermaid.py  test_parser.py
